--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/YoutubeUploader/StandardDescription.txt
+/YoutubeUploader/client_secrets.json
+/OctoThumbnailGenerator/octoawesome.png
