Added new thumbnail generator, that works with colored fonts

--- a/OctoThumbnailGenerator/OctoThumbnailGenerator.csproj
+++ b/OctoThumbnailGenerator/OctoThumbnailGenerator.csproj
@@ -1,13 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <TargetFramework>net5.0</TargetFramework>
+    <AssemblyTitle>OfflineImageProcessingApp</AssemblyTitle>
+    <Product>OfflineImageProcessingApp</Product>
+    <Copyright>Copyright ©  2013</Copyright>
+    <AssemblyTitle>OfflineImageProcessingApp</AssemblyTitle>
+    <Product>OfflineImageProcessingApp</Product>
+    <Copyright>Copyright ©  2013</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <None Remove="octoawesome.png" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="SharpDX" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Direct2D1" Version="4.2.0" />
+    <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
+    <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="octoawesome.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
