Added back thumbnail generatio on demand
* Added image helper class, so the same stuff can be easily reused

--- a/YoutubeUploader/YoutubeUploader.csproj
+++ b/YoutubeUploader/YoutubeUploader.csproj
@@ -23,6 +23,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OctoThumbnailGenerator\OctoThumbnailGenerator.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="client_secrets.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
